--- a/index.html
+++ b/index.html
@@ -53,9 +53,6 @@
 								-->
 							</div>
 							<li><a href="people.html">people</a></li>
-							<li><a href="publications.html">publications</a></li>
-							<li><a href="facilities.html">facilities</a></li>
-							<li><a href="news.html">news</a></li>
 							<li><a href="contact.html">contact</a></li>
 						</ul>
 					</div>
@@ -124,18 +121,14 @@
 	<div class="row">
 		<div class="col-2"></div>
 		<div class="col-6">
-			<h1>About Us</h1>
+			<h1>Enter Title Here</h1>
 
 			<div class="videoWrapper">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/hipoQhqau5E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/NpEaa2P7qZI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			</div>
 
 			<p>
-			Welcome to our research page at the University of Waterloo! Here you’ll find information about the members of our team, various research projects
-			we are working on or have executed in the past, a description of our facilities, and media articles where our research has been featured. We try to
-			update this site with new information at least annually, so if you would like to know more about any of our specific current activities please feel
-			free to email the team members working on the topic. Our research is supported by various federal, provincial and industrial partners, including
-			NSERC (Discovery, industrial partnerships and Canada Research Chairs programs), CFI and OCE.
+			We are the Sensing and Robotics for Infrastructure lab, SRI. Our overarching research goal is to better understand and quantify the condition and remaining useful life of civil and mechanical infrastructure systems through the intelligent use of sensors and data. In pursuit of this, we are pioneering sensing systems that can measure the state of infrastructure non-destructively above and below ground as well as in aquatic environments. In addition, we are developing analytical and algorithmic tools needed to process, interpret and transform sensor data into actionable information. You will find here information regarding the ground-based and water-based robots we have developed which can enable a wide range of inspection related tasks for civil infrastructure, a novel IoT inspired leak detection system for water distribution networks and signal processing algorithms to enable condition assessment of rotating machinery and bridges using vibration data.
 			</p>
 
 			<p>
@@ -143,8 +136,7 @@
 			</p>
 
 			<p><strong>
-			Note to prospective graduate students: Please use <a href="https://uwaterloo.ca/engineering/contact-faculty-member-about-graduate-studies" target="_blank" style="color: rgb(178,40,45); text-decoration: underline;">this form</a> to contact us about joining our group.
-			</strong></p> <!-- Move this to contact page? -->
+			Prospective PhD students and postdocs: Please email with your CV to snarasim at ucla dot edu. Due to the volume of enquiries, we will only reply if there is a match. All positions in our lab will be at UCLA.
 		</div>
 		<div class="col-2"></div>
 	</div>
