--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="author" content="Dylan Dowling">
 	<meta name="author email" content="dylantdowling@gmail.com">
-	<meta name="description" content="Structural Dynamics Identification and Controls (SDIC) Lab at the University of Waterloo">
-	<meta name="keywords" content="Structural, Dynamics, Identification, Controls, SDIC, University of Waterloo, UW, UWaterloo">
+	<meta name="description" content="Sensing & Robotics for Infrastructure (SRI) Lab at the University of California, Los Angeles">
+	<meta name="keywords" content="Sensing, Robots, Infrastructure, SRI, UCLA, University of California Los Angeles, UC, UC Los Angeles">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Home | SDIC Lab | University of Waterloo</title>
+	<title>Home | SRI Lab | University of California, Los Angeles</title>
 
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
@@ -32,7 +32,7 @@
 			<div class="col-8">
 				<div class="row">
 					<div class="col-2" style="text-align: center;">
-						<a href="http://www.civil.uwaterloo.ca/snarasim/"><img src="Images/Logos/SDIC_RGB_highres_blackback.png" style="height: 5.5rem; text-align:center;" alt="SDIC Logo" /></a>
+						<a href="#index.html/"><img src="https://research.seas.ucla.edu/sri-lab/files/2019/08/SRILab-logo.png" style="height: 5.5rem; text-align:center;" alt="SRI Logo" /></a>
 					</div>
 					<div class="col-6" id="navigation">
 						<ul>
