--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						</ul>
 					</div>
 					<div class="col-2" style="text-align: center; margin: 1.75rem 0 0 0;">
-						<a href="https://uwaterloo.ca/"><img src="Images/Logos/UniversityOfWaterloo_logo_horiz_rev_rgb_cropped.png" style="height: 2.688rem; text-align:center;" alt="UW Logo" /></a>
+						<a href="https://uwaterloo.ca/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/University_of_California%2C_Los_Angeles_logo.svg/2560px-University_of_California%2C_Los_Angeles_logo.svg.png" style="height: 2.688rem; text-align:center;" alt="UCLA Logo" /></a>
 					</div>
 				</div>
 			</div>
@@ -69,7 +69,7 @@
 		<div class="row" style="padding:16px;">
 			<div style="width:18%; float:left;"> </div>
 			<div style="width:64%; float: left;">
-				<a href="http://www.civil.uwaterloo.ca/snarasim/"><img src="Images/Logos/SDIC_RGB_highres_blackback.png" style="max-width: 125px; text-align:center;" alt="SDIC Logo" /></a>
+				<a href="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/University_of_California%2C_Los_Angeles_logo.svg/2560px-University_of_California%2C_Los_Angeles_logo.svg.png" style="max-width: 125px; text-align:center;" alt="UCLA Logo" /></a>
 			</div>
 			<div style="width:18%; float:right;" >
 				<div class="container-format container" onclick="changeBars(this); dropMenu()" id="menubars">
@@ -91,7 +91,7 @@
 						<li><a href="dic.html">dic</a></li>
 						<li><a href="water-networks.html">water networks</a></li>
 						<li><a href="fault-diagnostics.html">fault diagnostics</a></li>
-						<li><a href="mobile-sensors.html">mobile sensors</a></li>
+							<li><a href="mobile-sensors.html">mobile sensors</a></li>
 						<li><a href="defect-detection.html">defect detection</a></li>
 					</ul>
 				-->
@@ -138,56 +138,6 @@
 		<div class="col-2"></div>
 	</div>
 
-	<div class="row">
-		<div class="col-2"></div>
-		<div class="col-6">
-			<a href="news.html"><h1>News</h1></a>
-			<div class="row">
-				<div class="col-4">
-					<a href="https://kitchener.ctvnews.ca/robots-make-bridge-inspections-safer-and-cheaper-says-researchers-1.4506907" class="news-story">
-						<span class="news-date">Jul. 13, 2019</span>
-						<h2>Robots make bridge inspections safer and cheaper, says researchers</h2>
-						<img src="Images/News/BridgeInspectionCTV.png" alt="Bridge Inspection CTV" style="max-width:100%;" />
-						<p>University of Waterloo researchers say they have developed a system that will help make bridge inspections more accurate and accessible....</p>
-					</a>
-				</div>
-				<div class="col-1"></div>
-				<div class="col-4">
-					<a href="https://www.cbc.ca/news/canada/kitchener-waterloo/robot-bridge-inspections-1.5220741" class="news-story">
-						<span class="news-date">Jul. 23, 2019</span>
-						<h2>There's more to bridge inspections that meets the eye</h2>
-						<img src="Images/News/BridgeInspectionCBC.png" alt="Bridge Inspection CBC" style="max-width:100%;" />
-						<p>A team of researchers from Waterloo University have designed a robot that they say performs bridge inspections faster, more reliably and at a lower cost than ever before....</p>
-					</a>
-				</div>
-				<div class="col-1"></div>
-			</div>
-			<div class="row">
-				<div class="col-4">
-					<a href="https://uwaterloo.ca/global-impact/rise-of-women-stem" class="news-story">
-						<span class="news-date">Dec. 28, 2018</span>
-						<h2>The Rise of Women in STEM</h2>
-						<img src="Images/News/The_Rise_of_Women_in_STEM.jpg" alt="Waterloo Global Impact" style="max-width:100%;" />
-						<p>Back when she was 10 years old, Pampa Dey stood inside the sweet shop her father owned in a small, remote village on the eastern tip of India, and did what she did best...</p>
-					</a>
-				</div>
-				<div class="col-1"></div>
-				<div class="col-4">
-					<a href="news.html">
-					<span class="news-date" style="visibility:hidden;">filler</span>
-					<h2 style="visibility:hidden;">filler</h2>
-					<h2 style="visibility:hidden;">filler</h2>
-						<div class="news-block">
-								<span class="caption" style="line-height:1.3em">VIEW ALL</span>
-								<span class="caption" style="font-size:14pt; font-weight: bold; line-height:1.3em">NEWS</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-1"></div>
-			</div>
-		</div>
-		<div class="col-2"></div>
-	</div>
 
 	<br />
 
@@ -195,12 +145,12 @@
 		<div class="row">
 			<div class="col-1"></div>
 			<div class="col-3 footertext" style="margin-top:0.75rem;">
-				Engineering 2, Room 2342<br />
-				200 University Avenue West<br />
-				Waterloo, ON, Canada N2L 3G1
+				UCLA Samueli School of Engineering<br />
+				Department of Civil and Environmental Engineering<br />
+				Los Angeles, CA 90095
 			</div>
 			<div class="col-2">
-				<a href="http://www.civil.uwaterloo.ca/snarasim/"><img src="Images/Logos/SDIC_RGB_highres_blackback.png" style="max-width: 162px; text-align:center;" alt="SDIC Logo" /></a>
+				<a href="https://samueli.ucla.edu/people/sriram-narasimhan/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/University_of_California%2C_Los_Angeles_logo.svg/2560px-University_of_California%2C_Los_Angeles_logo.svg.png"; text-align:center;" alt="UCLA Logo" /></a>
 			</div>
 			<div class="col-3" style="margin-top:1.5rem;">
 				<a href="https://www.youtube.com/channel/UCtjwXoHisOEYkMxI7sRIcLg" target="_blank"><img src="Images/Logos/yt_icon_rgb.png" alt="YouTube" height=32px /></a>
