--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 								-->
 							</div>
 							<li><a href="people.html">people</a></li>
+							<li><a href="https://scholar.google.ca/citations?user=HNGo_jAAAAAJ&hl=en">publications</a></li>
 							<li><a href="contact.html">contact</a></li>
 						</ul>
 					</div>
