--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						</ul>
 					</div>
 					<div class="col-2" style="text-align: center; margin: 1.75rem 0 0 0;">
-						<a href="https://uwaterloo.ca/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/University_of_California%2C_Los_Angeles_logo.svg/2560px-University_of_California%2C_Los_Angeles_logo.svg.png" style="height: 2.688rem; text-align:center;" alt="UCLA Logo" /></a>
+						<a href="https://ucla.edu/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/University_of_California%2C_Los_Angeles_logo.svg/2560px-University_of_California%2C_Los_Angeles_logo.svg.png" style="height: 2.688rem; text-align:center;" alt="UCLA Logo" /></a>
 					</div>
 				</div>
 			</div>
@@ -112,7 +112,7 @@
 
 	<div class="row">
 		<div id="banner" class="col-10">
-			<img src="Images/Group/banner-photo-2019.jpg" style="max-width:100%;" alt="Group photograph" />
+			<img src="https://sri-lab.seas.ucla.edu/files/2023/04/Group_Cropped-1.png" style="max-width:100%;" alt="Group photograph" />
 		</div>
 	</div>
 
