--- a/DIC.html
+++ b/DIC.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html> 
+<head> 
 	<meta charset="UTF-8">
 	<meta name="author" content="Dylan Dowling">
 	<meta name="author email" content="dylantdowling@gmail.com">
-	<meta name="description" content="Structural Dynamics Identification and Controls (SDIC) Lab at the University of Waterloo">
-	<meta name="keywords" content="Structural, Dynamics, Identification, Controls, SDIC, University of Waterloo, UW, UWaterloo">
+	<meta name="description" content="Sensing & Robotics for Infrastructure (SRI) Lab at the University of California, Los Angeles">
+	<meta name="keywords" content="Sensing, Robots, Infrastructure, SRI, UCLA, University of California Los Angeles, UC, UC Los Angeles">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>DIC | SDIC Lab | University of Waterloo</title>
+	<title>Home | SRI Lab | University of California, Los Angeles</title>
 
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
@@ -32,7 +32,7 @@
 			<div class="col-8">
 				<div class="row">
 					<div class="col-2" style="text-align: center;">
-						<a href="http://www.civil.uwaterloo.ca/snarasim/"><img src="Images/Logos/SDIC_RGB_highres_blackback.png" style="height: 5.5rem; text-align:center;" alt="SDIC Logo" /></a>
+						<a href="#index.html/"><img src="https://research.seas.ucla.edu/sri-lab/files/2019/08/SRILab-logo.png"; text-align:center;" alt="SRI Logo" /></a>
 					</div>
 					<div class="col-6" id="navigation">
 						<ul>
@@ -53,14 +53,12 @@
 								-->
 							</div>
 							<li><a href="people.html">people</a></li>
-							<li><a href="publications.html">publications</a></li>
-							<li><a href="facilities.html">facilities</a></li>
-							<li><a href="news.html">news</a></li>
+							<li><a href="https://scholar.google.ca/citations?user=HNGo_jAAAAAJ&hl=en">publications</a></li>
 							<li><a href="contact.html">contact</a></li>
 						</ul>
 					</div>
 					<div class="col-2" style="text-align: center; margin: 1.75rem 0 0 0;">
-						<a href="https://uwaterloo.ca/"><img src="Images/Logos/UniversityOfWaterloo_logo_horiz_rev_rgb_cropped.png" style="height: 2.688rem; text-align:center;" alt="UW Logo" /></a>
+						<a href="https://ucla.edu/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/University_of_California%2C_Los_Angeles_logo.svg/2560px-University_of_California%2C_Los_Angeles_logo.svg.png" style="height: 2.688rem; text-align:center;" alt="UCLA Logo" /></a>
 					</div>
 				</div>
 			</div>
@@ -72,7 +70,7 @@
 		<div class="row" style="padding:16px;">
 			<div style="width:18%; float:left;"> </div>
 			<div style="width:64%; float: left;">
-				<a href="http://www.civil.uwaterloo.ca/snarasim/"><img src="Images/Logos/SDIC_RGB_highres_blackback.png" style="max-width: 125px; text-align:center;" alt="SDIC Logo" /></a>
+				<a href="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/University_of_California%2C_Los_Angeles_logo.svg/2560px-University_of_California%2C_Los_Angeles_logo.svg.png" style="max-width: 125px; text-align:center;" alt="UCLA Logo" /></a>
 			</div>
 			<div style="width:18%; float:right;" >
 				<div class="container-format container" onclick="changeBars(this); dropMenu()" id="menubars">
@@ -94,26 +92,24 @@
 						<li><a href="dic.html">dic</a></li>
 						<li><a href="water-networks.html">water networks</a></li>
 						<li><a href="fault-diagnostics.html">fault diagnostics</a></li>
-						<li><a href="mobile-sensors.html">mobile sensors</a></li>
+							<li><a href="mobile-sensors.html">mobile sensors</a></li>
 						<li><a href="defect-detection.html">defect detection</a></li>
 					</ul>
 				-->
 				</li>
 				<li><a href="people.html">people</a></li>
-				<li><a href="publications.html">publications</a></li>
-				<li><a href="facilities.html">facilities</a></li>
-				<li><a href="news.html">news</a></li>
 				<li><a href="contact.html">contact</a></li>
 			</ul>
 		</div>
 	</div>
 
 	<div id="colorbar">
-		<div id="colorbar1"></div>
-		<div id="colorbar2"></div>
-		<div id="colorbar3"></div>
-		<div id="colorbar4"></div>
+		<div id="colorbar17"></div>
+		<div id="colorbar18"></div>
+		<div id="colorbar19"></div>
+		<div id="colorbar20"></div>
 	</div>
+
 
 	<div class="row">
 		<div class="col-2"></div>
