--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 				<a href="https://samueli.ucla.edu/people/sriram-narasimhan/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/University_of_California%2C_Los_Angeles_logo.svg/2560px-University_of_California%2C_Los_Angeles_logo.svg.png"; text-align:center;" alt="UCLA Logo" /></a>
 			</div>
 			<div class="col-3" style="margin-top:1.5rem;">
-				<a href="https://www.youtube.com/channel/UCtjwXoHisOEYkMxI7sRIcLg" target="_blank"><img src="Images/Logos/yt_icon_rgb.png" alt="YouTube" height=32px /></a>
-				<a href="contact.html"><img src="Images/Logos/email-icon-bw-inv.png" alt="Email" height=32px /></a>
+				<a href="https://www.youtube.com/channel/UCtjwXoHisOEYkMxI7sRIcLg" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/YouTube_full-color_icon_%282017%29.svg/2560px-YouTube_full-color_icon_%282017%29.svg.png" alt="YouTube" height=32px /></a>
+				<a href="contact.html"><img src="https://cdn4.iconfinder.com/data/icons/social-media-logos-6/512/112-gmail_email_mail-512.png" alt="Email" height=32px /></a>
 			</div>
 			<div class="col-1"></div>
 		</div>
