--- a/people.html
+++ b/people.html
@@ -118,23 +118,20 @@
 			<div class="row">
 				<div class="col-2"></div>
 				<div class="col-3">
-					<img src="Images/Headshots/SNarasimhan.jpg" alt="Dr. Sriram Narasimhan" />
+					<img src="https://bpb-us-w2.wpmucdn.com/research.seas.ucla.edu/dist/c/31/files/2021/02/9e817445-87a6-4c18-a695-8f42f6ed5739.jpg" alt="Dr. Sriram Narasimhan" />
 				</div>
 				<div class="col-4" style="margin-left:2%;">
 					<h3>Sriram Narasimhan, PhD, P.Eng (ON)</h3><br />
 					<span class="caption">
-						Canada Research Chair in Smart Infrastructure<br /><br />
+						UCLA Samueli School of Engineering<br /><br />
 						Professor<br />
 						Civil & Environmental Engineering and<br />
-						Mechanical & Mechatronics Engineering (cross-appointed)<br />
-						University of Waterloo, Waterloo, ON, Canada<br />
+						7400 Boelter Hall (cross-appointed)<br />
+						Los Angeles, CA 90095<br />
 						<br />
-						Email: <a href="mailto:sriram.narasimhan@uwaterloo.ca" class="caption">sriram.narasimhan@uwaterloo.ca</a> <br />
-						Phone: +1 519 888 4567 x38081<br />
-						<a href="https://uwaterloo.ca/engineering/contact-faculty-member-about-graduate-studies" target="_blank" class="caption" style="color: rgb(178,40,45); text-decoration: underline;">Contact me about graduate studies</a><br /><br />
+						Email: <a href="mailto:snarasim@ucla.edu" class="caption">snarasim@ucla.edu</a> <br />
 						<a href="https://www.linkedin.com/in/sriram-narasimhan-b2488110"><img src="Images/Logos/In-2CRev-128px-TM.png" alt="Linkedin" height=32px /></a>
 						<a href="https://scholar.google.ca/citations?user=HNGo_jAAAAAJ&hl=en"><img src="Images/Logos/google-scholar.png" alt="Google Scholar" height=32px /></a>
-						<a href="https://uwaterloo.ca/civil-environmental-engineering/about/people/snarasim"><img src="Images/Logos/uw-logo.png" alt="University of Waterloo Profile" height=32px /></a>
 					</span>
 				</div>
 				<div class="col-1"></div>
