--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="col-8">
 				<div class="row">
 					<div class="col-2" style="text-align: center;">
-						<a href="https://skandaarvind.github.io/sri-lab/index.html/"><img src="https://research.seas.ucla.edu/sri-lab/files/2019/08/SRILab-logo.png"; text-align:center;" alt="SRI Logo" /></a>
+						<a href="https://skandaarvind.github.io/sri-lab/index.html"><img src="https://research.seas.ucla.edu/sri-lab/files/2019/08/SRILab-logo.png"; text-align:center;" alt="SRI Logo" /></a>
 					</div>
 					<div class="col-6" id="navigation">
 						<ul>
