--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="Images/Favicons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="Images/Favicons/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="Images/Favicons/favicon-16x16.png">
-	<link rel="manifest" href="Images/Favicons/site.webmanifest">
+	<link rel="manifest" href="Images/Favicons/site.webmanifest"> 
 	<link rel="mask-icon" href="Images/Favicons/safari-pinned-tab.svg" color="#b2282d">
 	<link rel="shortcut icon" href="Images/Favicons/favicon.ico">
 	<meta name="msapplication-TileColor" content="#b2282d">
@@ -28,11 +28,11 @@
 <body>
 	<div id="header">
 		<div class="row">
-			<div class="col-1"></div>
+			<div class="col-1"></div> 
 			<div class="col-8">
 				<div class="row">
 					<div class="col-2" style="text-align: center;">
-						<a href="#index.html/"><img src="https://research.seas.ucla.edu/sri-lab/files/2019/08/SRILab-logo.png"; text-align:center;" alt="SRI Logo" /></a>
+						<a href="https://skandaarvind.github.io/sri-lab/index.html"><img src="https://research.seas.ucla.edu/sri-lab/files/2019/08/SRILab-logo.png"; text-align:center;" alt="SRI Logo" /></a>
 					</div>
 					<div class="col-6" id="navigation">
 						<ul>
@@ -65,7 +65,7 @@
 			<div class="col-1"></div>
 		</div>
 	</div>
-
+	
 	<div id="mobile-header">
 		<div class="row" style="padding:16px;">
 			<div style="width:18%; float:left;"> </div>
