--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 			</div>
 			<div class="col-3" style="margin-top:1.5rem;">
 				<a href="https://www.youtube.com/channel/UCtjwXoHisOEYkMxI7sRIcLg" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/YouTube_full-color_icon_%282017%29.svg/2560px-YouTube_full-color_icon_%282017%29.svg.png" alt="YouTube" height=32px /></a>
-				<a href="contact.html"><img src="https://cdn4.iconfinder.com/data/icons/social-media-logos-6/512/112-gmail_email_mail-512.png" alt="Email" height=32px /></a>
+				<a href="contact.html"><img src="email-icon-bw-inv.png" alt="Email" height=32px /></a>
 			</div>
 			<div class="col-1"></div>
 		</div>
