--- a/RoboticInspection.html
+++ b/RoboticInspection.html
@@ -504,16 +504,16 @@
 		<div class="row">
 			<div class="col-1"></div>
 			<div class="col-3 footertext" style="margin-top:0.75rem;">
-				Engineering 2, Room 2342<br />
-				200 University Avenue West<br />
-				Waterloo, ON, Canada N2L 3G1
+				UCLA Samueli School of Engineering<br />
+				Department of Civil and Environmental Engineering<br />
+				Los Angeles, CA 90095
 			</div>
 			<div class="col-2">
-				<a href="http://www.civil.uwaterloo.ca/snarasim/"><img src="Images/Logos/SDIC_RGB_highres_blackback.png" style="max-width: 162px; text-align:center;" alt="SDIC Logo" /></a>
+				<a href="https://samueli.ucla.edu/people/sriram-narasimhan/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/University_of_California%2C_Los_Angeles_logo.svg/2560px-University_of_California%2C_Los_Angeles_logo.svg.png"; text-align:center;" alt="UCLA Logo" /></a>
 			</div>
 			<div class="col-3" style="margin-top:1.5rem;">
-				<a href="https://www.youtube.com/channel/UCtjwXoHisOEYkMxI7sRIcLg" target="_blank"><img src="Images/Logos/yt_icon_rgb.png" alt="YouTube" height=32px /></a>
-				<a href="contact.html"><img src="Images/Logos/email-icon-bw-inv.png" alt="Email" height=32px /></a>
+				<a href="https://www.youtube.com/channel/UCtjwXoHisOEYkMxI7sRIcLg" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/YouTube_full-color_icon_%282017%29.svg/2560px-YouTube_full-color_icon_%282017%29.svg.png" alt="YouTube" height=32px /></a>
+				<a href="contact.html"><img src="email-icon-bw-inv.png" alt="Email" height=32px /></a>
 			</div>
 			<div class="col-1"></div>
 		</div>
