--- a/contact.html
+++ b/contact.html
@@ -144,17 +144,20 @@
 	<div id="footer">
 		<div class="row">
 			<div class="col-1"></div>
-			<div class="col-3 footertext" style="margin-top:0.75rem;">Address Line 1<br>Address Line 2<br>Address Line 3</div>
+			<div class="col-3 footertext" style="margin-top:0.75rem;">
+				UCLA Samueli School of Engineering<br />
+				Department of Civil and Environmental Engineering<br />
+				Los Angeles, CA 90095
+			</div>
 			<div class="col-2">
-				<a href="http://www.civil.uwaterloo.ca/snarasim/"><img src="./contact (EDITED)_files/placeholder.png" style="max-width: 162px; text-align:center;" alt="SDIC Logo"></a>
+				<a href="https://samueli.ucla.edu/people/sriram-narasimhan/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/University_of_California%2C_Los_Angeles_logo.svg/2560px-University_of_California%2C_Los_Angeles_logo.svg.png"; text-align:center;" alt="UCLA Logo" /></a>
 			</div>
 			<div class="col-3" style="margin-top:1.5rem;">
-				<a href="https://www.youtube.com/channel/UCtjwXoHisOEYkMxI7sRIcLg" target="_blank"><img src="./contact (EDITED)_files/yt_icon_rgb.png" alt="YouTube" height="32px"></a>
-				<a href="file:///Users/skand/Downloads/website-master/contact.html"><img src="./contact (EDITED)_files/email-icon-bw-inv.png" alt="Email" height="32px"></a>
+				<a href="https://www.youtube.com/channel/UCtjwXoHisOEYkMxI7sRIcLg" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/YouTube_full-color_icon_%282017%29.svg/2560px-YouTube_full-color_icon_%282017%29.svg.png" alt="YouTube" height=32px /></a>
+				<a href="contact.html"><img src="email-icon-bw-inv.png" alt="Email" height=32px /></a>
 			</div>
 			<div class="col-1"></div>
 		</div>
 	</div>
-
-
-</body></html>
+</body>
+</html>
