--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 	<br />
 
 	<div id="footer">
+	<div id="footer">
 		<div class="row">
 			<div class="col-1"></div>
 			<div class="col-3 footertext" style="margin-top:0.75rem;">
