--- a/template.html
+++ b/template.html
@@ -178,7 +178,7 @@
 				<div class="col-4">
 					<a href="" class="news-story">
 						<span class="news-date">Aug. 16, 2018</span>
-						<h2>From a Remove Indian Village to a PhD in Engineering</h2>
+						<h2>From a Remote Indian Village to a PhD in Engineering</h2>
 						<img src="Images/News/UW_BridgeDamper_Husky-Clearpath.jpg" alt="Team with clearpath husky" style="max-width:100%;" />
 						<p>When Pampa Dey was a 10-year-old part-time cashier working in her father’s sweet shop in a remote Indian village, she discovered a love of math. With no calculator or computer to rely on, young Dey could add, subtract, multiply and divide complicated sums in her head at lightning speed.</p>
 					</a>
@@ -193,16 +193,16 @@
 		<div class="row">
 			<div class="col-1"></div>
 			<div class="col-3 footertext" style="margin-top:0.75rem;">
-				Engineering 2, Room 2342<br />
-				200 University Avenue West<br />
-				Waterloo, ON, Canada N2L 3G1
+				UCLA Samueli School of Engineering<br />
+				Department of Civil and Environmental Engineering<br />
+				Los Angeles, CA 90095
 			</div>
 			<div class="col-2">
-				<a href="http://www.civil.uwaterloo.ca/snarasim/"><img src="Images/Logos/SDIC_RGB_highres_blackback.png" style="max-width: 162px; text-align:center;" alt="SDIC Logo" /></a>
+				<a href="https://samueli.ucla.edu/people/sriram-narasimhan/"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6c/University_of_California%2C_Los_Angeles_logo.svg/2560px-University_of_California%2C_Los_Angeles_logo.svg.png"; text-align:center;" alt="UCLA Logo" /></a>
 			</div>
 			<div class="col-3" style="margin-top:1.5rem;">
-				<a href="https://www.youtube.com/channel/UCtjwXoHisOEYkMxI7sRIcLg" target="_blank"><img src="Images/Logos/yt_icon_rgb.png" alt="YouTube" height=32px /></a>
-				<a href="contact.html"><img src="Images/Logos/email-icon-bw-inv.png" alt="Email" height=32px /></a>
+				<a href="https://www.youtube.com/channel/UCtjwXoHisOEYkMxI7sRIcLg" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/09/YouTube_full-color_icon_%282017%29.svg/2560px-YouTube_full-color_icon_%282017%29.svg.png" alt="YouTube" height=32px /></a>
+				<a href="contact.html"><img src="email-icon-bw-inv.png" alt="Email" height=32px /></a>
 			</div>
 			<div class="col-1"></div>
 		</div>
