--- a/research.html
+++ b/research.html
@@ -116,60 +116,9 @@
 			<h1>Current Projects</h1>
 			<div class="row">
 				<div class="col-5" style="text-align:center;">
-					<a href="PipeLeakDetection.html">
-						<h2>Assessment of Water Distribution Networks</h2>
-						<img src="Images/Research/CoverPhotos/PipeLeakDetection.jpg" alt="Pipe Network" /><br />
-					</a>
-				</div>
-				<div class="col-5" style="text-align:center;">
-					<a href="RoboticInspection.html">
-						<h2>Robotic Infrastructure Inspection</h2>
-						<img src="Images/Research/CoverPhotos/RoboticInspection2.jpg" alt="Husky Scanning" /><br />
-					</a>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-5" style="text-align:center;">
-					<a href="MachineFaultDiagnostics.html">
-						<h2>Machine Fault Diagnostics</h2>
-						<img src="Images/Research/CoverPhotos/MachineFaultDiagnostics.png" alt="Bearing monitoring" /><br />
-					</a>
-				</div>
-				<div class="col-5" style="text-align:center;">
-					<a href="DeepDefectDetection.html">
-						<h2>Deep Defect Detection</h2>
-						<img src="Images/Research/CoverPhotos/DeepDefectDetection.png" alt="Deep Defect Detection" /><br />
-					</a>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-5" style="text-align:center;">
-					<a href="DIC.html">
-						<h2>Digital Image Correlation (DIC)</h2>
-						<img src="Images/Research/CoverPhotos/DIC.jpg" alt="DIC camera" /><br />
-					</a>
-				</div>
-				<div class="col-5" style="text-align:center;">
-					<a href="SHMWithMobileSensors.html">
-						<h2>Structural Health Monitoring with Mobile Sensors</h2>
-						<img src="Images/Research/CoverPhotos/SHM.jpg" alt="SHM Photo" /><br />
-					</a>
-				</div>
-			</div>
-
-			<!-- Copy this -->
-			<!-- <div class="row">
-				<div class="col-5" style="text-align:center;">
-					<a href="CastIronWaterMainFractures.html">
-						<h2> Assessment of Cast Iron Water Main Fractures</h2>
-						<img src="Images/Research/CoverPhotos/CastIronWaterMainFractures.png" alt="Water Main Fracture" /><br />
-					</a>
-				</div>
-				<div class="col-5" style="text-align:center;">
-					<a href="FatigueReliability.html">
-						<h2>Probabilistic Fatigue Raliability</h2>
-						<img src="Images/Research/CoverPhotos/FatigueReliability.png" alt="Fatigue Cracks" /><br />
+					<a href="CurrentResearchTemplate.html">
+						<h2>ENTER RESEARCH HERE</h2>
+						<img src="placeholder.png" alt="ENTER IMAGE TITLE" /><br />
 					</a>
 				</div>
 			</div> -->
@@ -341,46 +290,11 @@
 	<div class="row">
 		<div class="col-2"></div>
 		<div class="col-2" style="text-align:center;">
-			<a href="AutonomousVehicleDamping.html">
-				<h2>Autonomous Vehicles for Damping</h2>
-				<img src="Images/Research/CoverPhotos/AutonomousVehicleDamping.jpg" alt="Husky" /><br />
+			<a href="PastResearchTemplate.html">
+				<h2>ENTER RESEARCH HERE</h2>
+				<img src="placeholder.html" alt="ENTER IMAGE TITLE" /><br />
 			</a>
-		</div>
-		<div class="col-2" style="text-align:center;">
-			<a href="FatigueReliability.html">
-				<h2>Probabilistic Fatigue Raliability</h2>
-				<img src="Images/Research/CoverPhotos/FatigueReliability.png" alt="Fatigue Cracks" /><br />
-			</a>
-		</div>
-		<div class="col-2" style="text-align:center;">
-			<a href="PedestrianBridges.html">
-				<h2>Pedestrian Bridges</h2>
-				<img src="Images/Research/CoverPhotos/PedestrianBridges.png" alt="Bridge Testing" class="research" /><br />
-			</a>
-		</div>
-		<div class="col-2"></div>
-	</div>
-
-	<div class="row">
-		<div class="col-2"></div>
-		<div class="col-2" style="text-align:center;">
-			<a href="OperationalModalAnalysis.html">
-				<h2>Operational Modal Analysis</h2>
-				<img src="Images/Research/CoverPhotos/OperationalModalAnalysis.png" alt="Bridge Modes" class="research" /><br />
-			</a>
-		</div>
-		<div class="col-2" style="text-align:center;">
-			<a href="WindInducedVibrations.html">
-				<h2>Wind-Induced Vibrations</h2>
-				<img src="Images/Research/CoverPhotos/WindInducedVibrations.png" alt="Wind Modeling" class="research" /><br />
-			</a>
-		</div>
-		<div class="col-2" style="text-align:center;">
-			<a href="DampingSystems.html">
-				<h2>Damping Systems for Structures</h2>
-				<img src="Images/Research/CoverPhotos/DampingSystems.png" alt="Damping Analysis" class="research" /><br />
-			</a>
-		</div>
+		</div>	
 		<div class="col-2"></div>
 	</div>
 
