--- a/research.html
+++ b/research.html
@@ -121,7 +121,7 @@
 						<img src="placeholder.png" alt="ENTER IMAGE TITLE" /><br />
 					</a>
 				</div>
-			</div> -->
+			</div>
 			<!-- to this-->
 
 			<!-- Paste new row here -->
@@ -292,7 +292,7 @@
 		<div class="col-2" style="text-align:center;">
 			<a href="PastResearchTemplate.html">
 				<h2>ENTER RESEARCH HERE</h2>
-				<img src="placeholder.html" alt="ENTER IMAGE TITLE" /><br />
+				<img src="placeholder.png" alt="ENTER IMAGE TITLE" /><br />
 			</a>
 		</div>	
 		<div class="col-2"></div>
