--- a/people.html
+++ b/people.html
@@ -147,84 +147,12 @@
 		<div class="col-6">
 			<h1>Current Students</h1>
 			<div id="people">
-				<a href="https://sites.google.com/view/rajdip-nayek/">
-					<img src="Images/Headshots/RNayek.jpg" alt="Rajdip Nayek" /><br />
-					<h3>Rajdip Nayek,</h3>
-					<span class="caption">M. Eng. (2014)<br />
+				<a href="https://sites.google.com/view/enter-url/">
+					<img src="placeholder.png" alt="ENTER IMAGE TITLE" /><br />
+					<h3>FName LName,</h3>
+					<span class="caption">M. Eng. (YEAR)<br />
 					PhD Candidate</span>
 				</a>
-			</div>
-			<div id="people">
-				<a href="https://sites.google.com/site/stanleyhfong/home">
-					<img src="Images/Headshots/SFong.jpg" alt="Stan Fong" /><br />
-					<h3>Stan Fong,</h3>
-					<span class="caption">BASc (2015)<br />
-					PhD Candidate</span>
-				</a>
-			</div>
-			<div id="people">
-				<a href="https://sites.google.com/site/rooyacody/home">
-					<img src="Images/Headshots/RCody.jpg" alt="Roya Cody" /><br />
-					<h3>Roya Cody,</h3>
-					<span class="caption">MASc (2013)<br />
-					PhD Candidate</span>
-				</a>
-			</div>
-			<div id="people">
-				<a href="https://sites.google.com/site/nicholasccharron/">
-					<img src="Images/Headshots/NCharron.jpg" alt="Nicholas Charron" /><br />
-					<h3>Nicholas Charron,</h3>
-					<span class="caption">BASc (2016)<br />
-					PhD Candidate</span>
-				</a>
-			</div>
-			<div id="people">
-				<a href="https://sites.google.com/site/sjphilliwaterloo/home">
-					<img src="Images/Headshots/SPhillips.jpg" alt="Stephen Phillips" /><br />
-					<h3>Stephen Phillips,</h3>
-					<span class="caption">BASc (2016)<br />
-					PhD Candidate</span>
-				</a>
-			</div>
-			<div id="people">
-				<a href="https://sites.google.com/site/marshaldeepkafle/">
-					<img src="Images/Headshots/MKafle.jpg" alt="Marshal Deep Kafle" /><br />
-					<h3>Marshal Deep Kafle,</h3>
-					<span class="caption">MASc (2013)<br />
-					PhD Candidate</span>
-				</a>
-			</div>
-			<div id="people">
-				<a href="https://sites.google.com/site/uwprsingh/">
-					<img src="Images/Headshots/PSingh.jpg" alt="Piyius Raj Singh" /><br />
-					<h3>Piyius Raj Singh,</h3>
-					<span class="caption">BTech-MTech (2011)<br />
-					PhD Candidate</span>
-				</a>
-			</div>
-			<div id="people">
-				<a href="https://sites.google.com/site/harmouchejinane/home">
-					<img src="Images/Headshots/JHarmouche.jpg" alt="Jinane Harmouche" /><br />
-					<h3>Jinane Harmouche,</h3>
-					<span class="caption">PhD (2014)<br />
-					Postdoctoral Fellow</span>
-				</a>
-			</div>
-			<div id="people">
-				<a href="https://sites.google.com/uwaterloo.ca/emmclaugh/home">
-					<img src="Images/Headshots/EMclaughlin.jpg" alt="Evan McLaughlin" /><br />
-					<h3>Evan McLaughlin,</h3>
-					<span class="caption">BASc (2018)<br />
-					MASc Candidate</span>
-				</a>
-			</div>
-			<div id="people">
-				<!-- <a href="https://sites.google.com/site/kjgoorts/"> -->
-					<img src="Images/Headshots/DFriesen.jpg" alt="Dirk Friesen" /><br />
-					<h3>Dirk Friesen,</h3>
-					<span class="caption">BASc (2017)<br />
-					Research Engineer</span>
-				<!-- </a> -->
 			</div>
 		</div>
 		<div class="col-2"></div>
@@ -235,124 +163,12 @@
 		<div class="col-6">
 			<h1>Alumni</h1>
 			<div id="people2">
-				<a href="https://sites.google.com/site/kjgoorts/">
-					<img src="Images/Headshots/Alumni/KGoortsReduced.jpg" alt="Kevin Goorts" /><br />
-					<h3>Kevin Goorts,</h3><br>
+				<a href="https://sites.google.com/site/enter-url/">
+					<img src="placeholder.png" alt="ENTER IMAGE TITLE" /><br />
+					<h3>FName LName,</h3><br>
 					<span class="caption">PhD<br/></span>
-					<span class="caption2">Present: Bank of Montreal, Model Risk Specialist<br/></span>
+					<span class="caption2">Present: Enter Role<br/></span>
 				</a>
-			</div>
-			<div id="people2">
-			<a href="https://sites.google.com/site/gprakash66/">
-				<img src="Images/Headshots/Alumni/GPrakashReduced.jpg" alt="Guru Prakash" /><br />
-				<h3>Guru Prakash,</h3><br>
-				<span class="caption">Postdoctoral Fellow<br/></span>
-				<span class="caption2">Present: Patna University, Assistant Professor<br/></span>
-			</a>
-			</div>
-			<div id="people2">
-				<a href="https://sites.google.com/site/pmdey12/">
-					<img src="Images/Headshots/Alumni/PDeyReduced.jpg" alt="Pampa Dey" /><br />
-					<h3>Pampa Dey,</h3>
-					<span class="caption">PhD<br/></span>
-					<span class="caption2">Present: Laval University, Assistant Professor<br/></span>
-				</a>
-			</div>
-			<div id="people2">
-				<a href="https://sites.google.com/site/ninafengineer/">
-					<img src="Images/Headshots/Alumni/NFengReduced.jpg" alt="Nina Feng" /><br />
-					<h3>Nina Feng,</h3><br>
-					<span class="caption">MASc<br/></span>
-					<span class="caption2">Present: SRK Consulting, Staff Consultant<br/></span>
-				</a>
-			</div>
-			<div id="people2">
-				<a href="https://sites.google.com/site/dylantdowling/">
-					<img src="Images/Headshots/Alumni/DDowlingReduced.jpg" alt="Dylan Dowling" /><br />
-					<h3>Dylan Dowling,</h3><br>
-					<span class="caption">MASc<br/></span>
-					<span class="caption2">Present: Gray & Fick Ltd., Structural Designer<br/></span>
-				</a>
-			</div>
-			<div id="people2">
-				<a href="https://scholar.google.ca/citations?hl=en&user=tIPoKpsAAAAJ&view_op=list_works&citft=2&email_for_op=AliAshasi2010%40gmail.com&gmla=AJsN-F7yXlNiG1R7Hr1imT3-cOkf_W7gFE17bjII-2uSiogIe9xFdS2aZQWh64Aoeq0Rs8ULTrjI_qVvThIn-PH98TldfWgZtzG_QsQQTmhDabpEnpf6XQ3ml0V6T4i41X1cWzb08z2Tb1lDodtXNJ9bqooie-4ovTtNeMwo3pPuYXn-kxc5Vdj4wYW_M1z3VZ7wLS3He4xKJXZJ7WYJTK-j99LLwJmZu5sE4Xm2r8BFMoXfc9eDmpFDD2dGtpEWS75Ua5vrMQ4U">
-					<img src="Images/Headshots/Alumni/AAshashiSorkhabi.jpg" alt="Ali Ashasi-Sorkhabi" /><br />
-					<h3>Ali Ashasi-Sorkhabi,</h3><br>
-					<span class="caption">Postdoctoral Fellow<br/></span>
-					<span class="caption2">Present: University of Toronto, Postdoctoral Researcher<br/></span>
-				</a>
-			</div>
-			<div id="people2">
-				<img src="Images/Headshots/Alumni/ASadhu.jpg" alt="Ayan Sadhu" /><br />
-				<h3>Ayan Sadhu,</h3>
-				<span class="caption">Postdoctoral Fellow<br/></span>
-				<span class="caption2">Present: Assistant Professor, Western University<br/></span>
-			</div>
-			<div id="people2">
-				<img src="Images/Headshots/Alumni/BHazra.jpg" alt="Budhaditya Hazra " /><br />
-				<h3>Budhaditya Hazra,</h3>
-				<span class="caption">Postdoctoral Fellow<br/></span>
-				<span class="caption2">Present: Assistant Professor, Indian Institute of Technology<br/></span>
-			</div>
-			<div id="people2">
-				<img src="Images/Headshots/Alumni/DTopuzi.jpg" alt="Dritan Topuzi" /><br />
-				<h3>Dritan Topuzi,</h3>
-				<span class="caption">PhD<br/></span>
-				<span class="caption2">Present: Principal, Delta Innoveering Inc.<br/></span>
-			</div>
-			<div id="people2">
-				<img src="Images/Headshots/Alumni/ARoffel.jpg" alt="Aaron Roffel " /><br />
-				<h3>Aaron Roffel,</h3>
-				<span class="caption">PhD<br/></span>
-				<span class="caption2">Present: Operations and Services Director, Coherent Path<br/></span>
-			</div>
-			<div id="people2">
-				<img src="Images/Headshots/Alumni/ASychterz.jpg" alt="Ann Sychterz" /><br />
-				<h3>Ann Sychterz,</h3>
-				<span class="caption">MASc<br/></span>
-				<span class="caption2">Present: Postdoctoral Researcher, University of Michigan<br/></span>
-			</div>
-			<div id="people2">
-				<img src="Images/Headshots/Alumni/SPantula.jpeg" alt="Shilpa Pantula" /><br />
-				<h3>Shilpa Pantula,</h3>
-				<span class="caption">MASc<br/></span>
-				<span class="caption2">Present: Software Engineer, Unifi Software<br/></span>
-			</div>
-			<div id="people2">
-				<img src="Images/Headshots/Alumni/ARustum.jpg" alt="Asim Rustum" /><br />
-				<h3>Asim Rustum,</h3>
-				<span class="caption">MASc<br/></span>
-				<span class="caption2">Present: Assistant Lecturer, University of Benghazi<br/></span>
-			</div>
-			<div id="people2">
-				<img src="Images/Headshots/Alumni/RLourenco.jpg" alt="Richard Lourenco" /><br />
-				<h3>Richard Lourenco,</h3>
-				<span class="caption">MASc<br/></span>
-				<span class="caption2">Present: Engineering Consultant, SWI Systemware Innovation Corp.<br/></span>
-			</div>
-			<div id="people2">
-				<img src="Images/Headshots/Alumni/CWoude.jpg" alt="Chad Van der Woude" /><br />
-				<h3>Chad Van der Woude,</h3>
-				<span class="caption">MASc<br/></span>
-				<span class="caption2">Present: Structural Engineer, Hatch<br/></span>
-			</div>
-			<div id="people2">
-				<img src="Images/Headshots/Alumni/SKhierkhah.jpg" alt="Sina Khierkhah" /><br />
-				<h3>Sina Khierkhah,</h3>
-				<span class="caption">MASc<br/></span>
-				<span class="caption2">Present: Assistant Professor, Univerity of British Columbia<br/></span>
-			</div>
-			<div id="people2">
-				<img src="Images/Headshots/Alumni/PPaquet.jpg" alt="Paul Paquet" /><br />
-				<h3>Paul Paquet,</h3>
-				<span class="caption">MASc<br/></span>
-				<span class="caption2">Present: Senior Structural Engineer, Arup<br/></span>
-			</div>
-			<div id="people2">
-				<img src="Images/Headshots/Alumni/SShirali.jpg" alt="Sina Shirali" /><br />
-				<h3>Sina Shirali,</h3>
-				<span class="caption">MASc<br/></span>
-				<span class="caption2">Present: Engineer, Turner Construction Company<br/></span>
 			</div>
 		</div>
 		<div class="col-2"></div>
