--- a/research.html
+++ b/research.html
@@ -278,25 +278,27 @@
 		</div>
 		<div class="col-2"></div>
 	</div> -->
-
+	
 	<div class="row">
 		<div class="col-2"></div>
 		<div class="col-6">
 			<h1>Past Projects</h1>
+			<div class="row">
+				<div class="col-5" style="text-align:center;">
+					<a href="PastResearchTemplate.html">
+						<h2>ENTER RESEARCH HERE</h2>
+						<img src="placeholder.png" alt="ENTER IMAGE TITLE" /><br />
+					</a>
+				</div>
+			</div>
+			<!-- to this-->
+
+			<!-- Paste new row here -->
+
 		</div>
 		<div class="col-2"></div>
 	</div>
 
-	<div class="row">
-		<div class="col-2"></div>
-		<div class="col-2" style="text-align:center;">
-			<a href="PastResearchTemplate.html">
-				<h2>ENTER RESEARCH HERE</h2>
-				<img src="placeholder.png" alt="ENTER IMAGE TITLE" /><br />
-			</a>
-		</div>	
-		<div class="col-2"></div>
-	</div>
 
 	<br />
 
