--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
 
 	<div class="row">
 		<div id="banner" class="col-10">
-			<img src="https://bpb-us-w2.wpmucdn.com/research.seas.ucla.edu/dist/c/31/files/2023/04/Group_Cropped-1.png" style="max-width:100%;" alt="Group photograph" />
+			<img src="https://bpb-us-w2.wpmucdn.com/research.seas.ucla.edu/dist/c/31/files/2023/04/Group_Cropped-1.png" style="max-width:100%;" alt="Group photograph" 
+				width: 70%,
+				height: auto
+				/>
 		</div>
 	</div>
 
