--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@
 				</div>
 				<div class="col-1"></div>
 				<div class="col-5">
-					<iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3305.0107454695876!2d-118.4458141!3d34.0692388!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bc88829ce92b%3A0x2a860301f429d90b!2sBoelter%20Hall!5e0!3m2!1sen!2sus!4v1692977157069!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3305.0107465169667!2d-118.44581412432309!3d34.0692387731506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2bc88829ce92b%3A0x2a860301f429d90b!2sBoelter%20Hall!5e0!3m2!1sen!2sus!4v1692977735413!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</div>
 			</div>
 		</div>
