--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 	</div>
 
 	<div class="row">
-		<div id="banner" class="col-10">
+		<div id="banner">
+		<div style="text-align: center;">
 			<img src="https://bpb-us-w2.wpmucdn.com/research.seas.ucla.edu/dist/c/31/files/2023/04/Group_Cropped-1.png" alt="Group photograph" 
 				width: 70%,
 				height: auto
